--- a/2-04_html/step1/index.html
+++ b/2-04_html/step1/index.html
@@ -28,8 +28,9 @@
 </div><!-- /.container -->
 </footer>
 <script>
-'use strict';
-console.log(document.getElementById('choice'));
+
+document.getElementById('choice').textContent = "ナナナ"
+
 </script>
 </body>
 </html>
