--- a/3-01_if/step1/index.html
+++ b/3-01_if/step1/index.html
@@ -29,6 +29,14 @@
 </footer>
 <script>
 'use strict';
+//ifを使ってみる
+
+if (window.confirm('ゲームスタート？準備はいい！')) {
+    window.alert("スパート")
+}else{
+    window.alert("キャンドル")
+
+}
 
 console.log(window.confirm('ゲームスタート！準備はいい？'));
 </script>
