--- a/3-02_let-const/step1/index.html
+++ b/3-02_let-const/step1/index.html
@@ -29,9 +29,15 @@
 </footer>
 <script>
 'use strict';
-
-let answer = window.prompt('ヘルプを見ますか？');
-console.log(answer);
+if (window.confirm('ゲームスタート？準備はいい！')) {
+    let answer = "yes"
+    console.log(answer);
+    //このanswerはこのブロック内でしか存在できない
+}else{
+    let answer = "no"
+    console.log(answer);
+    
+}
 </script>
 </body>
 </html>
