--- a/3-04_comparison/step1/index.html
+++ b/3-04_comparison/step1/index.html
@@ -28,21 +28,22 @@
 </div><!-- /.container -->
 </footer>
 <script>
-'use strict';
+    'use script';
+    const number = Math.floor(Math.random() * 6);
+    const answer = parseInt(window.prompt('数あてゲーム。0~5の数字を入力'));
+    let message;
+    if(answer == number) {
+        message = '当たり';
+    } else if(answer > number) {
+        message = '残念、もっと大きいです';
+    } else if(answer < number) {
+        message = '残念、もっと小さいです。';
+    } 
+    
+    
+    window.alert(message);
 
-const number = Math.floor(Math.random() * 6);
-const answer = parseInt(window.prompt('数当てゲーム。0〜5の数字を入力してね。'));
-let message;
-if(answer === number) {
-    message = 'あたり！';
-} else if(answer < number) {
-    message = '残念でした！もっと大きい';
-} else if(answer > number) {
-    message = '残念でした！もっと小さい';
-} else {
-    message = '0〜5の数字を入力してね。';
-}
-window.alert(message);
+
 </script>
 </body>
 </html>
